--- a/app/src/main/res/layout/activity_section_f2_s2.xml
+++ b/app/src/main/res/layout/activity_section_f2_s2.xml
@@ -143,11 +143,13 @@
                         <RadioGroup
                             android:id="@+id/f2202"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f220201"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2202.equals(`1`)}"
                                 android:onClick="@{()->form.setF2202(`1`)}"
@@ -155,7 +157,8 @@
 
                             <RadioButton
                                 android:id="@+id/f220202"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2202.equals(`2`)}"
                                 android:onClick="@{()->form.setF2202(`2`)}"
@@ -163,7 +166,8 @@
 
                             <RadioButton
                                 android:id="@+id/f220203"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2202.equals(`3`)}"
                                 android:onClick="@{()->form.setF2202(`3`)}"
@@ -171,7 +175,8 @@
 
                             <RadioButton
                                 android:id="@+id/f220204"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2202.equals(`4`)}"
                                 android:onClick="@{()->form.setF2202(`4`)}"
@@ -212,11 +217,13 @@
                         <RadioGroup
                             android:id="@+id/f2203"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f220301"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2203.equals(`1`)}"
                                 android:onClick="@{()->form.setF2203(`1`)}"
@@ -224,7 +231,8 @@
 
                             <RadioButton
                                 android:id="@+id/f220302"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2203.equals(`2`)}"
                                 android:onClick="@{()->form.setF2203(`2`)}"
@@ -433,11 +441,13 @@
                         <RadioGroup
                             android:id="@+id/f2206"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f220601"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2206.equals(`1`)}"
                                 android:onClick="@{()->form.setF2206(`1`)}"
@@ -445,7 +455,8 @@
 
                             <RadioButton
                                 android:id="@+id/f220602"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2206.equals(`2`)}"
                                 android:onClick="@{()->form.setF2206(`2`)}"
@@ -486,11 +497,13 @@
                         <RadioGroup
                             android:id="@+id/f2207"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f220701"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2207.equals(`1`)}"
                                 android:onClick="@{()->form.setF2207(`1`)}"
@@ -498,7 +511,8 @@
 
                             <RadioButton
                                 android:id="@+id/f220702"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2207.equals(`2`)}"
                                 android:onClick="@{()->form.setF2207(`2`)}"
@@ -626,11 +640,13 @@
                         <RadioGroup
                             android:id="@+id/f2209"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f220901"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2209.equals(`1`)}"
                                 android:onClick="@{()->form.setF2209(`1`)}"
@@ -638,7 +654,8 @@
 
                             <RadioButton
                                 android:id="@+id/f220902"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f2209.equals(`2`)}"
                                 android:onClick="@{()->form.setF2209(`2`)}"
