--- a/app/src/main/res/layout/activity_section_f3_s2.xml
+++ b/app/src/main/res/layout/activity_section_f3_s2.xml
@@ -72,11 +72,13 @@
                         <RadioGroup
                             android:id="@+id/f3201"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f320101"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3201.equals(`1`)}"
                                 android:onClick="@{()->form.setF3201(`1`)}"
@@ -84,7 +86,8 @@
 
                             <RadioButton
                                 android:id="@+id/f320102"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3201.equals(`2`)}"
                                 android:onClick="@{()->form.setF3201(`2`)}"
@@ -125,11 +128,13 @@
                         <RadioGroup
                             android:id="@+id/f3202"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f320201"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3202.equals(`1`)}"
                                 android:onClick="@{()->form.setF3202(`1`)}"
@@ -137,7 +142,8 @@
 
                             <RadioButton
                                 android:id="@+id/f320202"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3202.equals(`2`)}"
                                 android:onClick="@{()->form.setF3202(`2`)}"
@@ -178,11 +184,13 @@
                         <RadioGroup
                             android:id="@+id/f3203"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f320301"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3203.equals(`1`)}"
                                 android:onClick="@{()->form.setF3203(`1`)}"
@@ -190,7 +198,8 @@
 
                             <RadioButton
                                 android:id="@+id/f320302"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3203.equals(`2`)}"
                                 android:onClick="@{()->form.setF3203(`2`)}"
