--- a/app/src/main/res/layout/activity_section_f3_s4.xml
+++ b/app/src/main/res/layout/activity_section_f3_s4.xml
@@ -72,20 +72,23 @@
                         <RadioGroup
                             android:id="@+id/f3401"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f340101"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:checked="@{form.f3401.equals(`1`)}"
                                 android:onClick="@{()->form.setF3401(`1`)}"
                                 android:text="@string/f340101" />
 
                             <RadioButton
                                 android:id="@+id/f340102"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:checked="@{form.f3401.equals(`2`)}"
                                 android:onClick="@{()->form.setF3401(`2`)}"
                                 android:text="@string/f340102" />
@@ -128,6 +131,7 @@
                             android:layout_height="wrap_content">
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
@@ -190,6 +194,7 @@
                                 android:text="@string/f340207" />
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
@@ -280,20 +285,23 @@
                         <RadioGroup
                             android:id="@+id/f3403"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f340301"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:checked="@{form.f3403.equals(`1`)}"
                                 android:onClick="@{()->form.setF3403(`1`)}"
                                 android:text="@string/f340301" />
 
                             <RadioButton
                                 android:id="@+id/f340302"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:checked="@{form.f3403.equals(`2`)}"
                                 android:onClick="@{()->form.setF3403(`2`)}"
                                 android:text="@string/f340302" />
@@ -333,20 +341,23 @@
                         <RadioGroup
                             android:id="@+id/f3404"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f340401"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:checked="@{form.f3404.equals(`1`)}"
                                 android:onClick="@{()->form.setF3404(`1`)}"
                                 android:text="@string/f340401" />
 
                             <RadioButton
                                 android:id="@+id/f340402"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:checked="@{form.f3404.equals(`2`)}"
                                 android:onClick="@{()->form.setF3404(`2`)}"
                                 android:text="@string/f340402" />
@@ -460,6 +471,7 @@
                             android:layout_height="wrap_content">
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
@@ -659,29 +671,33 @@
 
                         </LinearLayout>
 
+                        <TextView
+                            style="@style/info"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
+                            android:text="@string/f3409t1" />
+
                         <RadioGroup
                             android:id="@+id/f3409"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="12dp"
-                                android:text="@string/f3409t1" />
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f340901"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:checked="@{form.f3409.equals(`1`)}"
                                 android:onClick="@{()->form.setF3409(`1`)}"
                                 android:text="@string/f340901" />
 
                             <RadioButton
                                 android:id="@+id/f340902"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:checked="@{form.f3409.equals(`2`)}"
                                 android:onClick="@{()->form.setF3409(`2`)}"
                                 android:text="@string/f340902" />
