--- a/app/src/main/res/layout/activity_section_f3_s6.xml
+++ b/app/src/main/res/layout/activity_section_f3_s6.xml
@@ -72,11 +72,13 @@
                         <RadioGroup
                             android:id="@+id/f3601"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f360101"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3601.equals(`1`)}"
                                 android:onClick="@{()->form.setF3601(`1`)}"
@@ -84,7 +86,8 @@
 
                             <RadioButton
                                 android:id="@+id/f360102"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3601.equals(`2`)}"
                                 android:onClick="@{()->form.setF3601(`2`)}"
@@ -470,11 +473,13 @@
                         <RadioGroup
                             android:id="@+id/f3607"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f360701"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3607.equals(`1`)}"
                                 android:onClick="@{()->form.setF3607(`1`)}"
@@ -482,7 +487,8 @@
 
                             <RadioButton
                                 android:id="@+id/f360702"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3607.equals(`2`)}"
                                 android:onClick="@{()->form.setF3607(`2`)}"
@@ -683,11 +689,13 @@
                         <RadioGroup
                             android:id="@+id/f3610"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f361001"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3610.equals(`1`)}"
                                 android:onClick="@{()->form.setF3610(`1`)}"
@@ -695,7 +703,8 @@
 
                             <RadioButton
                                 android:id="@+id/f361002"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3610.equals(`2`)}"
                                 android:onClick="@{()->form.setF3610(`2`)}"
@@ -858,11 +867,13 @@
                         <RadioGroup
                             android:id="@+id/f3613"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f361301"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3613.equals(`1`)}"
                                 android:onClick="@{()->form.setF3613(`1`)}"
@@ -870,7 +881,8 @@
 
                             <RadioButton
                                 android:id="@+id/f361302"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3613.equals(`2`)}"
                                 android:onClick="@{()->form.setF3613(`2`)}"
@@ -911,11 +923,13 @@
                         <RadioGroup
                             android:id="@+id/f3614"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f361401"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3614.equals(`1`)}"
                                 android:onClick="@{()->form.setF3614(`1`)}"
@@ -923,7 +937,8 @@
 
                             <RadioButton
                                 android:id="@+id/f361402"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3614.equals(`2`)}"
                                 android:onClick="@{()->form.setF3614(`2`)}"
@@ -1042,20 +1057,23 @@
 
                         </LinearLayout>
 
+                        <TextView
+                            style="@style/info"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
+                            android:text="@string/f3616t1" />
+
                         <RadioGroup
                             android:id="@+id/f3616"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="12dp"
-                                android:text="@string/f3616t1" />
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f361601"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3616.equals(`1`)}"
                                 android:onClick="@{()->form.setF3616(`1`)}"
@@ -1063,7 +1081,8 @@
 
                             <RadioButton
                                 android:id="@+id/f361602"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3616.equals(`2`)}"
                                 android:onClick="@{()->form.setF3616(`2`)}"
@@ -1071,7 +1090,8 @@
 
                             <RadioButton
                                 android:id="@+id/f361698"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3616.equals(`98`)}"
                                 android:onClick="@{()->form.setF3616(`98`)}"
