--- a/app/src/main/res/layout/activity_section_f1_s1.xml
+++ b/app/src/main/res/layout/activity_section_f1_s1.xml
@@ -245,9 +245,10 @@
                 </androidx.cardview.widget.CardView>
 
                 <!-- f1103  Input   -->
-                <!--<androidx.cardview.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf1103"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="@{form.f1102.equals(`1`) ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -281,7 +282,7 @@
                             android:hint="@string/f1103"
                             android:text="@={form.f1103}" />
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>-->
+                </androidx.cardview.widget.CardView>
 
                 <!-- f1107  Input   -->
                 <androidx.cardview.widget.CardView
